Dependencies, JDK17